[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["regulad <regulad@outlook.com>"]
description = "Python library that allows you to use La Crosse devices that connect with La Crosse View"
license = "GPLv3"
name = "pylacrosseview"
readme = "README.md"
version = "0.1.5"
[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
[tool.poetry.dependencies.PyJWT]
extras = ["crypto"]
version = "^2.3.0"
[tool.poetry.dev-dependencies]
